 - [ZBXNEXT-483] added vfs.file.contents[file,encoding] check (asaveljevs)
 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.4rc3

 - [ZBX-3306] fixed minimal value limit for action escalation period (Vedmak)
 - [ZBX-3320] fixed host.create, template.create permission error for admin users (Vedmak)
 - [ZBX-266] made debugging output for Web scenarios more useful (Sasha)
 - [ZBX-1181] fixed infinite looping when failing cURL initialization and showing of such errors in the GUI (asaveljevs,Sasha,Vedmak)
 - [ZBX-1181] fixed download speed, response time, and response code not being saved for failed Web scenario steps (asaveljevs)
 - [ZBX-2851] fixed apache hanging when frontend connects to empty database (Vedmak)
 - [ZBX-2647] made some of hard coded strings translatable (KB)
 - [ZBX-3294] fixed host status change confirmation dialog (Vedmak)
 - [ZBX-3301] fixed server crash after libssh2_userauth_list() when processing SSH checks (asaveljevs)
 - [ZBX-2395] fixed sending of the same message to the same user using different media types (asaveljevs)
 - [ZBXNEXT-586] added sensor[device,sensor,<mode>] check for Linux 2.4 (asaveljevs)
 - [ZBXNEXT-586] added sensor[device,sensor,<mode>] check for OpenBSD; thanks to Robert Nagy (asaveljevs)
 - [ZBX-3252] fixed graph height calculations when graph height was less then 120px (KB)
 - [ZBX-3261] fixed second level template deletion (Aly)
 - [ZBX-3295] fixed compilation warnings in eztexting module if code configured without cURL library (Sasha)
 - [ZBX-2862] it is now not possible to delete host group or user group used in scripts (KB)
 - [ZBX-3281] fixed system.cpu.util[] for all processors combined on NetBSD (asaveljevs)